# makemore

./: 0_makemore.ipynb  1_mlp.ipynb  2_batchnorm.ipynb  pyproject.toml
notebooks/: 03_batchnorm.ipynb  04_backprop.ipynb  05_wavenet.ipynb  07_nano_gpt.ipynb
scripts/: bigram.py
