[project]
name = "makemore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
